--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ mod_id = rotp_mwp
 mod_name = RotP-MobsWithPowers
 mod_group_id = net.weever
 mod_authors = Weever
-addon_version=1.0.0
-release = false
+addon_version=1.0.1
+release = true
 
 main_mod_version=1.16.5-0.2.2-pre6-snapshot-241120-a
 playeranim_version = 0.4.0+1.16.5
