- Added experimental data-driven Combo System for both Stand and Non-Stand abilities, configurable via datapacks - Time Stop for mob Stand users now has a randomized duration for more varied encounters - Initial implementation of Non-Stand powers (disabled by default); can be tested using `/stand give @s rotp_mwp:debug_stand` - Reworked Stand Arrow mechanics for mobs to better match player experience; now uses the Stand Virus system properly - Improved baby Stand mechanic and mob AI – better performance and dynamic positioning to keep mob-controlled Stands in attack range - Bug fixes   - Fixed Killer Queen's Sheer Heart Attack config settings not applying correctly   - Fixed mobs getting duplicate Stand abilities after reloading world or chunks   - Fixed Gold Experience granting Stands to its created lifeforms

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ mod_id = rotp_mwp
 mod_name = RotP-MobsWithPowers
 mod_group_id = net.weever
 mod_authors = Weever
-addon_version=1.0.7.1
+addon_version=1.1.0
 release = true
 
-main_mod_version=1.16.5-0.2.2-pre6-snapshot-241120-a
+main_mod_version=1.16.5-0.2.2-snapshot-250430-a
 playeranim_version = 0.4.0+1.16.5
 bendylib_version = 1.2.2
